# simple-task-manager

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
infra/: docker-compose.local.yml  docker-compose.test.yml
infra/commands/: api.sh  test-api.sh
src/: config.py  main.py
src/api/: __init__.py  task.py
src/api/dependencies/: __init__.py  db.py  pagination.py
src/db/: __init__.py  database.py
src/db/mixins/: __init__.py  pk.py  timestamp.py
src/exceptions/api/: base.py  task.py
src/exceptions/repository/: base.py
src/exceptions/service/: base.py  task.py
src/migrations/: env.py
src/migrations/versions/: 2025_08_19_1646-4f40af8a5367_add_task_model.py
src/models/: task.py
src/repositories/: __init__.py  base.py  task.py
src/repositories/mappers/: base.py  task.py
src/schemas/: pagination.py  task.py
src/schemas/base/: schemas.py
src/services/: __init__.py  base.py  task.py
src/utils/: transaction.py
tests/: conftest.py
tests/api/tasks/: test_create_task.py  test_delete_one_task.py  test_get_all_tasks.py  test_get_one_task.py  test_update_one_task.py
