[project]
name = "simple-task-manager"
version = "0.1.0"
description = "Simple task manager"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "inflect>=7.5.0",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
